trying to fix quote not displaying properly on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -68,4 +68,12 @@ figcaption {
   .scroll__down {
     display: none;
   }
+
+  h1 {
+    line-height: 4rem;
+  }
+
+  blockquote {
+    margin-top: 4rem;
+  }
 }
